--- a/contactus.html
+++ b/contactus.html
@@ -23,17 +23,22 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <h1>NuCamp</h1>
-                    <h2>a better way to camp</h2>
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <a href="index.html"> <img src="img/logo.png" class="img-fluid" /></a>
                 </div>
+                    <div class="col">
+                        <h1>NuCamp</h1>
+                        <h2>a better way to camp</h2>
+                    </div>
+                        
             </div>
         </div>
     </header>
-
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-        <div class="container">
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+            <div class="container">
+                <a class="navbar-brand" href="index.html"><img src="img/logo.png"
+                    height="30" width="30" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
@@ -80,13 +85,68 @@
                 <hr />
             </div>
             <div class="col-md-10">
-                Form goes here
+                <form>
+                    <div class="form-group row">
+                        <label for="firstName" class="col-md-2 col-form-label">First Name</label>
+                        <div class="col-md-10">    
+                        <input class="form-control" id="firstName" type="text" name="firstName"
+                                placeholder="First Name"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="lastName" class="col-md-2 col-form-label">Last Name</label>
+                            <div class="col-md-10"><input class="form-control" id="lastName" type="text" name="lastName"
+                                placeholder="Last Name"/>
+                            </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label" for="phoneNumber">Phone Number</label>
+                            <div class="col-5 col-md-3"><input class="form-control" id="phoneNumber" type="tel" name="areaCode"
+                                placeholder="Area Code" />
+                            </div>
+                            <div class="col-7">
+                            <input class="form-control" type="tel" name="telNum"
+                                placeholder="Tel. Number"/>
+                            </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label" for="email">Email</label>
+                            <div class="col-md-10"><input class="form-control" id="email" type="email" name="email"
+                                placeholder="Email"/>
+                            </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col offset-md-2">
+                                 May we contact you?
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="contactY" type="radio" name="contactRadios"
+                                        value="yes"><label class="form-check-label" for="contactY"> Yes </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="contactN" type="radio" name="contactRadios"
+                                        value="no"> <label class="form-check-label" for="contactN"> No </label>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label" for="feed">Your feedback:</label>
+                        <div class="col-md-10">   
+                            <textarea class="form-control" id="feed" name="feedback" rows="8"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <button class="btn btn-primary" type="submit">Send Feedback</button>
+                        </div>
+                    </div>
+                    
+                </form> 
             </div>
        </div>
 
     </div>
 
-    <footer>
+    <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
